                             1 channel in x.
                Defect 200:  Gamma 1dL spectrum increments no 64 bit clean
                Defect 209:  Mor of the same as 200.
  June 23, 2006 Defect 210:  Problems with scaning ints -> longs.
  June 28, 2006 Xamine has some 64 bit defects as well, these manifest
                           on longword 2d spectra
                Gui has problems if the user makes e.g. a and a.b  fix this.
                Defect 211 - crash if making g1 spectrum with empty parameter 
                             list
  June 29, 2006 Improve performance of terminal parent creation in gui.
                Fix defect in allocatro.c's alignment mask computation that
                causes free list corruption on e.g. 64 bit systems.
  July 5, 2006  Propagate fix for 64 bit problems with mask equal gates.
                Work around issue with tclsh 8.4 early where
                string is integer 0x80000000 (e.g.) returns false..
                makes creation of mask gates fail.
  July 13, 2006 Forward propagate fix for defect 213 to this version.
                Took the easy way out copying all of *.cc,*.h from Display
                and ChanCommand.cpp from SpecTcl.
  July 17, 2006 Fix bitmask gate inconsistency between mask size in command
                and in the classes implemebnting the gates....do this
                by loading the gate mask value into the base class.
  July 19, 2006 Fix error in newGui.tcl. When used with scaler processing,
                RunNumber could be >Unknown< when formatting the status
                line.
  July 28, 2006 Fix error in wysiwyg printing  for zoomed displays.
  July 31, 2006 Fix off by one error in scaling.cc - for small scale ranges,
                and small channel values, the channel height was visibly
                lower than the corresponding tick mark.
  August 8, 2006 Enhancement 194 - increase precision in output of 
                 integrations.